@@ -59,8 +59,12 @@ enum {
 	#define ATARI_NTSC_RGB_BITS 16
 #endif
 
-/* Atari800 Initialise function by perrym */
-void ATARI_NTSC_DEFAULTS_Initialise(int *argc, char *argv[], atari_ntsc_setup_t *atari_ntsc_setup);
+
+/* Atari800-specific: */
+
+extern atari_ntsc_setup_t atari_ntsc_setup;
+
+void atari_ntsc_Initialise(int *argc, char *argv[]);
 
 
 #endif
